// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteListModal component matches snapshot with optional props 1`] = `
<Fragment>
  <mockConstructor
    onClick={[MockFunction]}
    type="button"
  >
    Mock button
  </mockConstructor>
  <Modal
    confirmLoading={false}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[MockFunction]}
    onOk={[MockFunction]}
    title="Delete list"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <Paragraph
      style={
        Object {
          "marginBottom": "16px",
        }
      }
      type="danger"
    >
      Delete error
    </Paragraph>
    Do you want to delete Test list list?
  </Modal>
</Fragment>
`;

exports[`DeleteListModal component matches snapshot with required props 1`] = `
<Fragment>
  <mockConstructor
    onClick={[MockFunction]}
  />
  <Modal
    confirmLoading={false}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[MockFunction]}
    onOk={[MockFunction]}
    title="Delete list"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    Do you want to delete Test list list?
  </Modal>
</Fragment>
`;
